test_case/rust-lang_rust/6653_18380723.rs
 rust
fn main() {
  let mut a = ~1;
  let b = &mut *a;
  a = ~2;
}
// error: cannot assign to `a` because it is borrowed
